--- a/Styles/simple-combo-box.css
+++ b/Styles/simple-combo-box.css
@@ -1,4 +1,15 @@
 
+ol, ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline;
+}
+
+
 .cbwrapper {
   padding: 0px;
   margin: 0px;
