--- a/Styles/simple-combo-box.css
+++ b/Styles/simple-combo-box.css
@@ -114,7 +114,7 @@ ol, ul {
   line-height: 1em;
   font-size: inherit;
   padding-left: 5px;
-  border: solid 1px #4d4d4d;
+  border: solid 1px #999999;
   margin-right: 1px;
 }
 
@@ -177,7 +177,7 @@ ol, ul {
   padding: 2px;
   float: left;
   position: relative;
-  border: solid 1px #4d4d4d;
+  border: solid 1px #999999;
   height: 150px;
   z-index: 1000;
 }
