fix github button links

--- a/sass/simple-combo-box.scss
+++ b/sass/simple-combo-box.scss
@@ -81,7 +81,7 @@ ol, ul {
 	background-color: $jp-cb-color-background;
 	padding:3px;
 	border-top: solid 1px $jp-cb-color-background;
-	border-bottom: solid 1px $jp-color-background;
+	border-bottom: solid 1px $jp-cb-color-background;
 	cursor: pointer;
 	cursor: hand;
 	}
